# operator

./: .env  Cargo.toml  Makefile.toml  rust-toolchain.toml
av1-envoy/: Cargo.toml
av1-envoy/src/: endpoint.rs  lib.rs  main.rs
configs/: av1-envoy.service  av1-operator.service  default.toml
idl/: node.proto
migrations/2023-11-10-025649_hosts/: up.sql
migrations/2023-11-10-072637_applications/: up.sql
migrations/2023-11-10-075602_app_versions/: up.sql
scripts/: deploy.sh  log.sh  update_envoy.sh
src/: host.rs  http.rs  lib.rs  main.rs  schema.rs  settings.rs
src/application/: convert.rs  http.rs  mod.rs
src/host/: convert.rs  http_enpoint.rs  mod.rs  ssh.rs
src/repositry/: application.rs  host.rs  mod.rs
utils/: Cargo.toml
utils/src/: lib.rs  logger.rs  process.rs
utils/src/macros/: async_cmd.rs  diesel_new_type.rs  http.rs  id_wraper.rs  mod.rs
volo-gen/: volo.yml
volo-gen/src/: lib.rs
