[package]
name = "av1-operator"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = "1"
tracing = "0.1.40"
actix-web = "4"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
sled = "0.34.7"
bincode = "1.3.3"

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["display"]


[dependencies.utils]
path = "./utils"
features = ["id"]

# [profile.release]
# opt-level = 3
# debug = true
# debug-assertions = false
# overflow-checks = false
# lto = true
# panic = 'unwind'
# incremental = false
# codegen-units = 1
# rpath = false

[workspace]
members = ["av1-envoy", "volo-gen", "utils"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-grpc = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = "1"
