[package]
name = "av1-envoy"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
volo = "*"
volo-gen = { path = "../volo-gen" }
volo-grpc = "*"
utils = { path = "../utils" }
anyhow.workspace = true
tracing = "0.1.40"
