[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

[dependencies.local-ip-address]
version = "*"
optional = true

[dependencies.derive_more]
version = "0.99"
optional = true

[dependencies.paste]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
optional = true

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
optional = true

[dependencies.bincode]
version = "1.3.3"
optional = true

[dependencies.bytes]
version = "1.5.0"
optional = true

[dependencies.tokio-util]
version = "0.7.8"
features = ["codec"]
optional = true

[dependencies.redis]
version = "0.23.2"
features = ["tokio", "aio", "tokio-comp"]
optional = true

[dependencies.deadpool-redis]
version = "0.12.0"
optional = true

[dependencies.diesel]
version = "2.1.1"
optional = true
features = ["postgres", "chrono"]

[dependencies.diesel-async]
version = "0.3.2"
optional = true
features = ["deadpool", "postgres"]

[dependencies.flaken]
version = "0.2.2"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]
optional = true

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["clock", "std", "serde"]
optional = true

[dependencies.tracing]
version = "0.1.37"
optional = true

[dependencies.reqwest]
version = "0.11.20"
default-features = false
features = ["json", "hyper-rustls", "rustls-tls", "tokio-rustls"]
optional = true

[dependencies.async-process]
version = "1"
optional = true


[dev-dependencies]
tracing-test = "0.2.4"

[features]
default = ["logger", "async_cmd"]

# Features
logger = ["tracing", "dep:chrono", "serde"]
ip = ["dep:local-ip-address"]
keydb = ["redis/cluster-async", "redis"]
redis-pool = ["dep:deadpool-redis"]
redis = ["dep:redis"]
code = ["macros"]
codec = ["dep:bincode", "dep:bytes", "dep:tokio-util", "serde"]
diesel = ["dep:diesel", "dep:diesel-async", "serde", "dep:tokio"]
id = ["dep:flaken", "dep:derive_more", "ip"]
http = ["dep:reqwest"]
async_cmd = ["dep:tokio", "dep:async-process", "dep:tracing"]

# dep
serde = ["dep:serde"]
tracing = ["dep:tracing-subscriber", "dep:tracing"]
macros = ["dep:paste"]
